plugins {
    id 'java'
}

group = 'cz.raixo'
version = '3.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        name = 'placeholderapi'
        url = 'https://repo.extendedclip.com/releases/'
    }
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:$paperApiVersion"

    compileOnly 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    compileOnly 'me.clip:placeholderapi:2.12.3'
    compileOnly 'net.luckperms:api:5.5'

    testImplementation "io.papermc.paper:paper-api:$paperApiVersion"
    testImplementation platform('org.junit:junit-bom:5.11.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:deprecation' << '-Xlint:unchecked'
}

tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
}

processResources {
    // plugin.yml reads the version straight from the build so the two can never drift.
    inputs.property 'version', project.version
    filesMatching('plugin.yml') {
        expand version: project.version
    }
}

test {
    useJUnitPlatform()
}

jar {
    archiveFileName = "MineBlocks-${project.version}.jar"
}
